fix(themes): left & top border not showing

--- a/widget/src/styles/themes/classic.less
+++ b/widget/src/styles/themes/classic.less
@@ -20,9 +20,11 @@
     &::after {
       content: '';
       position: absolute;
-      left: calc(var(--border-width) * -1);
-      width: 100%;
-      height: 100%;
+      z-index: 2;
+      top: 0;
+      left: 0;
+      right: 0;
+      bottom: 0;
       background: linear-gradient(
         var(--border-rotation),
         var(--border-1),
@@ -69,8 +71,6 @@
         }
       }
 
-      border-radius: 11px;
-
       &::after {
         position: absolute;
         top: 0;
@@ -78,7 +78,7 @@
         width: 100%;
         height: 100%;
         content: '';
-        border-radius: 11px;
+        border-radius: 0;
         background: var(--background);
         z-index: -2;
         opacity: var(--background-opacity, 1);
